<resources>
    <string name="course_nuy_advanced_subtitle">Узнай android разработку лучше!</string>
    <string name="course_nuy_advanced">Продвинутый курс</string>
    <string name="course_nuy_indepth">Углубленный курс</string>
    <string name="course_nuy_indepth_subtitle">Подними свои знания на профессианальный уровень</string>
    <string name="tokenization_canceled">Вы отменили покупку</string>
    <string name="sposob_oplata">Способ оплаты</string>
    <string name="heart_limit">Лимит попыток 99</string>
    <string name="heart_setting">Попытки</string>
    <string name="count_heart">У вас сейчас: COUNT_HEART</string>
    <string name="attempts">ПОПЫТКИ</string>
    <string name="you_run_out_of_tries">У вас закончились попытки</string>
    <string name="delete_account_ok">Удалить</string>
    <string name="delete_account_cancel">Отмена</string>
    <string name="delete_account_question">Вы точно хотите удалить данные?</string>
    <string name="select_ad_type">Выберите вид рекламы</string>
<string name="select_pay_type">Выберите способ оплаты</string>
    <string name="google_ads">Реклама Google</string>
<string name="yukassa">Юкасса</string>
    <string name="mytarget_ads">Реклама MyTarget</string>
<string name="recommended_for_russian_federation">*Рекомендуется для РФ</string>
    <string name="way_ad">Вид рекламы</string>
    <string name="delete_my_account_data">Удалить аккаунт</string>
    <string name="google_sing_up">Войти через Google</string>
    <string name="back_press_again_exit">Нажмите снова для выхода</string>
    <string name="defaul_web_client_id">395678996298-0p708in0t58gpo81d5geevbskl67733n.apps.googleusercontent.com</string>
    <string name="exit_account_menu">Выйти из аккаунта</string>
    <string name="test_replay_results">Результаты теста</string>
    <string name="testing_bottom">Тестирования</string>
    <string name="victorine_bottom">Викторина</string>
    <string name="all_courses">Виды курсов</string>
    <string name="mouth_prem">Мес</string>
    <string name="social_network_description">Подписывайтесь на наши соц. сети чтобы быть в курсе последних обновлений и акций!</string>
    <string name="no_ads_view">Пока нет рекламы</string>
    <string name="cancel_rustore_billing">Вы отменили покупку</string>
    <string name="error_rustore_billing">Произошла ошибка при совершении покупки</string>
    <string name="rustore_not_install">Условия покупки не соблюдены</string>
    <string name="Ok_offline_button">Хорошо</string>
    <string name="clue_snackbar">Появилась подсказка</string>
    <string name="clue_snackbar_view">Посмотреть</string>
    <string name="close_btn">Закрыть</string>
    <string name="there_is_no_quiz_in_this_theme">У этой темы нет викторины</string>
    <string name="lesson_number">Урок</string>
    <string name="theme_number">Тема</string>
    <string name="node_money_andropoint">Не хватает андропоинтов</string>
    <string name="term_exit_victorine">Вам зачислена задержка за выход из викторины</string>
    <string name="restart_timer_victorine">Таймер перезапущен</string>
    <string name="password_mismatch">Пароли не совпадают</string>
    <string name="enter_your_email"> Введите вашу электронную почту для сброса пароля</string>
    <string name="enter_your_password"> Введите новый пароль</string>
    <string name="select_date">Выбрать дату</string>
    <string name="select_date_description">Введите дату и подсказку для себя по которой вы сможете восстановить пароль</string>
    <string name="select_keyword">Выбрать ключевую фразу</string>
    <string name="select_keyword_description">Введите ключевую фразу с вопросом или подсказкой по которой вы сможете восстановить пароль</string>
    <string name="app_name">Andropedia</string>
    <string name="fill_text">Заполните ключевую фразу и подсказку</string>
    <string name="keyword">Ключевая фраза</string>
    <string name="invalid_date">Неверная дата</string>
    <string name="invalid_keyword">Неверное слово</string>
    <string name="choose_another_date">Выберите другую дату</string>
    <string name="this_field_cannot_be_empty">Это поле не може быть пустым</string>
    <string name="enter_key_phrase_with_question_or_hint">Введите ключевую фразу с вопросом или подсказкой</string>
    <string name="testing_passed">Пройти ещё</string>
    <string name="fill_date">Заполните дату и подсказку</string>
    <string name="enter_date_and_hint">Введите дату и подсказку для себя</string>
    <string name="choose_recovery_method">Выберите способ восстановления</string>
    <string name="description_set_up_backup_password">Настройте резервный способ восстановление пароля(обязательно)</string>
    <string name="pay_no_caps">Оплатить</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="watch_ad_2">Смотреть рекламу -2ч </string>
    <string name="watch_ad_hearts">Смотреть рекламу +1</string>
    <string name="continue__">Продолжить COUNT_ANDROPOINT</string>
    <string name="buy">Купить</string>
    <string name="skip_delay">Пропустить задержку</string>
    <string name="delaySH">Задержка до DATA</string>
    <string name="course_was_successfully_purchased">Курс был успешно куплен!</string>
    <string name="This_theme_is_closed_for_now">Данная тема пока закрыта</string>
    <string name="success_award_credited">Награда успеша зачислено</string>
    <string name="theme_was_successfully_purchased">Тема была успешно куплена!</string>
    <string name="andropoints_were_successfully_purchased">Андропоинты были успешно куплены</string>
    <string name="subscription_was_successfully_purchased">Подписка была успешно куплена!</string>
    <string name="loading_is_complete">Загрузка завершена, приложение будет перезагружено через 5 секунд</string>
    <string name="you_not_have_favorite_lessons">У вас нет избранных уроков</string>
    <string name="you_not_have_favorite_theme">У вас нет избранных тем</string>
    <string name="in_developing">В разработке</string>
    <string name="advertising_is_only_available_when_there_delay">Реклама доступна только при задержке</string>
    <string name="victorine_is_closed_for_delay_until">Викторина закрыта на задержку до:</string>
    <string name="delay_was_successfully_reset">2 часа задержки было успешно сброшенно!</string>
    <string name="delay_has_been_successfully_reset">Задержка была успешно сброшена!</string>
    <string name="delay_andropoint_victorine_aviable">У вас нету задержки</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="pass_for_andropoint">Пропустить за андропоинты(-2ч) 4</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Регистрация-вход</string>
    <string name="sign_in_existing_account">Войти в существуюший аккаунт</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="welcome_back">С возвращением!</string>
    <string name="sign_up_title">Регистрация</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="favourite">Избранные</string>
    <string name="reminder_schedule">График напоминаний</string>
    <string name="settings">Настройки</string>
    <string name="about_Us">О нас</string>
    <string name="basic_course">Базовый</string>
    <string name="advance_course">Продвинутый</string>
    <string name="depth_course">Углубленный</string>
    <string name="what_gives_premium">Что дает премиум?</string>
    <string name="buy_premium">Купить Premium</string>
    <string name="Interactive">Интерактив</string>
    <string name="skip_delay_bottom_sheet">Пропуск задержки после провального теста</string>
    <string name="possibility_offline_bottom_sheet">Возможность работы приложения оффлайн</string>
    <string name="double_bonus_bottom_sheet">Удвоенный бонус получение андропоинтов</string>
    <string name="soon">Скоро</string>
    <string name="theme_close_entirely">Эта тема сейчас закрыта. Чтобы получить доступ к ней, вам необходимо пройти предыдущую тему.</string>
    <string name="or">Или</string>
    <string name="testing">Тестирования</string>
    <string name="next">Следующий-></string>
    <string name="previous">Предыдущий</string>
    <string name="try_again">Попробовать снова</string>
    <string name="unknown_error">Возникла неизвестная ошибка</string>
    <string name="advertising_limit_has_been_reached">У вас исчерпан лимит рекламы на 2 часа</string>
    <string name="advertising_will_be_available_through">Реклама будет доступна через 11 секунд</string>
    <string name="application_works_offline">Приложение работает в оффлайн режиме!</string>
    <string name="shock_mode_and_purchases_will_not_be_available">Ударный режим и покупки будут недоступны.</string>
    <string name="delete_in_offline_mode_progress">При удалении приложения прогресс полученный в оффлайн режиме будет утерян.</string>
    <string name="unknown_error_description">Перезагрузите приложение или попробуйте снова</string>
    <string name="server_not_responding_error">Сервер не отвечает</string>
    <string name="server_not_responding_error_description">Время ожидания ответа истекло, попробуйте снова</string>
    <string name="not_connected_internet">Упс... Кажется вы не подключены к Интернету</string>
    <string name="not_connected_internet_description">Установите стабильное подключение или купите ПРЕМИУМ чтобы учиться без Интернета!</string>
    <string name="email_empty">Поле электронной почты не может быть пустым.</string>
    <string name="password_empty">Поле пароля не может быть пустым.</string>
    <string name="password_incorrect">Неверный пароль. Пожалуйста, попробуйте еще раз.</string>
    <string name="email_incorrect">Неверный адрес электронной почты. Пожалуйста, убедитесь, что вы ввели правильный адрес.</string>
    <string name="email_wrong">Некорректно введен адрес электронной почты. Пожалуйста, убедитесь, что вы ввели правильный адрес.</string>
    <string name="password_too_long">Пароль слишком длинный. Пожалуйста, используйте пароль длиной не более 23 символов.</string>
    <string name="code_success">Код упешно введен</string>
    <string name="password_change">Пароль успешно изменен</string>
    <string name="code_incorrect">Неправильный код</string>
    <string name="close">Закрыть</string>
    <string name="promo_code_already_entered">Промокод уже введен</string>
    <string name="promo_code_already">У вас уже есть промокод</string>
    <string name="promo_code_not_exist">Данного промокода не существует</string>
    <string name="promo_code_was_success_used">Промокод был успешно использован</string>
    <string name="fail_test">Вы провалили тест!</string>
    <string name="count_mistake">6 из 10 правильных ответов</string>
    <string name="advice">Советуем за это время хорошо подготовиться. И мы верим, что в следующий раз у вас все получится!</string>
    <string name="watch_add">Вы можете посмотреть рекламу чтобы сократить задержку</string>
    <string name="buy_premium_fail_test">Приобрести ПРЕМИУМ и избавится от задержки навсегда!</string>
    <string name="term_before_fail_test">Вы сможете пройти тест повторно в DATA GMT+3</string>
    <string name="attention">ВНИМАНИЕ!</string>
    <string name="end_theme">Поздравляем! Вы завершили тему!</string>
    <string name="end_theme_description">Хорошая работа! Продолжайте в том же духе!</string>
    <string name="good_luck">Удачи!</string>
    <string name="good">Хорошо</string>
    <string name="set_size_text">Изменить размер текста</string>
    <string name="size_text">Размер текста</string>
    <string name="needed_clue">Нужна ли подсказка</string>
    <string name="set_size_code">Изменить размер кода</string>
    <string name="clue">Подсказака</string>
    <string name="attention_description">Не выходите из теста, в случае выхода тест будет автоматически провален!Вам будет дано определенное время на выполнение теста</string>
    <string name="ready">Готово</string>
</resources>