<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/victorine_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.reset.PasswordRecoveryMethodFragment">

    <View
        android:id="@+id/dimView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:elevation="20dp"
        android:visibility="gone" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/Text_black_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:text="@string/description_set_up_backup_password"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            style="@style/Text_black_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/choose_recovery_method"
            android:textSize="17dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/btnSelectDate"
            style="@style/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/Text_black_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_date"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                style="@style/Text_black_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#807E7E"
                android:text="@string/select_date_description"
                android:textSize="15dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnSelectKeyword"
            style="@style/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:textSize="20dp"
                style="@style/Text_black_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_keyword"
                android:textStyle="bold" />

            <TextView
                style="@style/Text_black_white"
                android:textColor="#807E7E"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_keyword_description"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>