<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="30dp"
    android:id="@+id/enterKeywordForgetCard"
    android:layout_marginEnd="30dp"
    android:theme="@style/ConstraintLightAndBlack"
    app:cardCornerRadius="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">
        <TextView
            android:id="@+id/tvQuestionKeywordForgetDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/fill_date"
            android:textSize="20dp"
            android:textStyle="bold"
            android:theme="@style/Text_black_white" />



        <EditText
            android:id="@+id/edKeywordForgetDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:theme="@style/editText_text"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="5dp"
            android:ems="5"
            android:hint="@string/keyword"
            android:padding="5dp"
            android:textSize="17sp" />
        <TextView
            android:id="@+id/tvErrorKeywordForget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/this_field_cannot_be_empty"
            android:textColor="@color/error"
            android:textSize="15dp"
            android:textStyle="bold"
            android:visibility="gone" />
        <androidx.cardview.widget.CardView
            android:id="@+id/btnReadyKeywordForgetDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            app:cardCornerRadius="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#1F71D0"
                android:gravity="center|center_horizontal|center_vertical"
                android:padding="10dp"
                android:text="@string/ready"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.cardview.widget.CardView>