<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    app:cardCornerRadius="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_dialog"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:theme="@style/ConstraintLightAndBlack"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/application_works_offline"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:theme="@style/Text_black_white" />

                <TextView
                    android:id="@+id/tvNotAvailableSmAndPurchases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/shock_mode_and_purchases_will_not_be_available"
                    android:theme="@style/Text_black_white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/delete_in_offline_mode_progress"
                    android:theme="@style/Text_black_white" />
                <androidx.cardview.widget.CardView
                    android:layout_marginTop="10dp"
                    android:id="@+id/btnCloseOfflineDialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginEnd="100dp"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="#1F71D0">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="#1F71D0"
                        android:padding="10dp"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:text="@string/Ok_offline_button"
                        android:textStyle="bold"
                        android:textColor="#FFFFFF" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.cardview.widget.CardView>